--- a/scss/_partners.scss
+++ b/scss/_partners.scss
@@ -18,8 +18,12 @@
   font-weight: 400;
   line-height: 24px;
   margin-bottom: 100px;
-  p {
+  .feedback {
     margin-bottom: 0;
+    font-style: italic;
+    font-weight: 700;
+    font-size: 16px;
+
   }
 }
 
@@ -29,3 +33,4 @@
   background-color: #c7c7c7;
   margin-bottom: 50px;
 }
+
