--- a/scss/_mobile-versiion.scss
+++ b/scss/_mobile-versiion.scss
@@ -1,9 +1,9 @@
-@media (max-width: 700px) {
+@media (max-width: 770px) {
 
-  //header
+  /* header */
 
   .logo {
-    margin: 0 calc(50% - 80px);
+    margin: 0 calc(50% - 100px);
   }
   .menu {
     margin: 0 auto;
@@ -28,9 +28,15 @@
       }
     }
   }
+
+  /* hero */
+
   .hero-wrap {
     padding-top: 100px;
   }
+
+  /* features */
+
   .features {
     height: 1363px !important;
   }
@@ -38,19 +44,8 @@
     position: relative;
     margin-top: -85px;
     margin-left: 35px;
-
-  }
-  .user {
-    margin-top: 210px;
-    margin-bottom: 40px;
-    justify-content: center;
   }
 
-  .article-name {
-    right: 0 !important;
-    text-align: center;
-    justify-content: center;
-  }
   .features-item {
     margin-top: 300px !important;
     margin-bottom: 50px;
@@ -63,6 +58,19 @@
       padding-left: 0;
     }
   }
+  .article-name {
+    right: 0 !important;
+    text-align: center;
+    justify-content: center;
+  }
+
+  /* social-networks */
+
+  .user {
+    margin-top: 210px;
+    margin-bottom: 40px;
+    justify-content: center;
+  }
   .netw-btns-wrap {
     flex-direction: column;
     align-items: center !important;
@@ -71,17 +79,24 @@
     }
   }
 
+  /* partners */
+
   .our-partner {
     margin-bottom: 60px;
     padding: 0 30px;
     &:first-child {
       margin-top: 30px !important;
     }
-
   }
   h2 {
     margin-bottom: 0 !important;
   }
+  .partners {
+    background-position: 60% 100%;
+  }
+
+  /* prices */
+
   .rates-wrap {
     flex-direction: column;
     margin-bottom: 40px;
@@ -94,12 +109,12 @@
     padding: 0 30px;
     margin-bottom: 40px;
   }
-  .partners {
-    background-position: 60% 100%;
-  }
+
   .prices {
     background-position: 60% 100%;
   }
+
+  /* subscribe */
 
   .subscribe {
     height: 210px;
@@ -118,12 +133,15 @@
     }
   }
 
+  /* articles */
+
   h5 {
     margin: 60px 0 40px;
   }
   .article-bttn {
     margin-top: 40px;
   }
+  /*footer*/
 
   footer {
     padding: 50px 0 80px !important;
@@ -143,19 +161,49 @@
     .product-descr-footer {
       width: 420px !important;
     }
-
     h6 {
       margin-top: 40px;
     }
-
   }
+}
 
+
+@media (max-width:1200px) {
+  .menu {
+    li {
+      margin-left:20px !important;
+    }
+  }
 }
 
 
 
-
-
+@media (max-width:993px) {
+  .logo {
+    margin: 0 calc(50% - 100px);
+  }
+  .menu {
+    display: flex;
+    justify-content: center !important;
+    margin-top: 20px;
+    li {
+      margin-left:10px !important;
+      a {
+        color: #8d81ac!important;
+        border-bottom: none !important;
+        &:hover {
+          cursor: pointer;
+          color: #fff !important;
+        }
+      }
+      &:last-child a{
+        color:#fff !important;
+        padding-left:15px !important;
+        padding-right:15px !important;
+      }
+    }
+  }
+}
 
 
 
